Fix light mode on info page

--- a/src/html/informace/index.njk
+++ b/src/html/informace/index.njk
@@ -51,6 +51,7 @@
     }
 
     main > hgroup {
+      color: #fff;
       grid-column: wide;
       border-radius: var(--corner-radius);
       display: flex;
