Toggle lineup link by settings

--- a/src/html/layouts/master.njk
+++ b/src/html/layouts/master.njk
@@ -97,6 +97,7 @@
         <li><a href="/novinky/">Novinky</a></li>
         <li><a href="/#vystoupi">Kdo vystoupí</a></li>
         <li><a href="/#vstupenky">Vstupenky</a></li>
+        {% if lineup.visible %}<li><a href="/#harmonogram">Časový harmonogram</a></li>{% endif %}
         <li><a href="#kontakt">Kontakt</a></li>
       </ul>
     </div>
