--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -59,7 +59,7 @@
       {% endfor %}
       <a href="/novinky/" class="cta">Zobrazit všechny novinky</a>
     </section>
-    <section id="informace-a-upozorneni">
+  <!--  <section id="informace-a-upozorneni">
       <header id="map">
         <h2>Důležité informace</h2>
       </header>
@@ -71,7 +71,7 @@
           <a href="/informace/" class="cta">Chci to vidět</a>
         </p>
       </article>
-    </section>
+    </section> -->
     <section class="artists-list" id="vystoupi">
       <header id="bands">
         <h2>{{ lineup.heading }}</h2>
