--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -412,9 +412,9 @@ section p {
   grid-row: 1;
   --text-color: white;
   --hero-bg-medium: image-set(
-    cloudinary-url("hero-bg.jpg", '{"dpr": 1}') 1x,
-    cloudinary-url("hero-bg.jpg", '{"dpr": 1.5}') 1.5x,
-    cloudinary-url("hero-bg.jpg", '{"dpr": 2}') 2x
+    cloudinary-url("hero-bg-big.jpg", '{"dpr": 1}') 1x,
+    cloudinary-url("hero-bg-big.jpg", '{"dpr": 1.5}') 1.5x,
+    cloudinary-url("hero-bg-big.jpg", '{"dpr": 2}') 2x
   );
   /* TODO: mobile and wide sizes */
   --hero-bg: var(--hero-bg-medium);
@@ -451,6 +451,10 @@ section p {
     line-height: 1.25;
     font-weight: 600;
     font-size: clamp(1.75rem, 6vw, 3rem);
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-image: radial-gradient(ellipse farthest-side at center, rgba(0,0,0,0.5) 50%, rgba(0,0,0,0) 100%);
+    background-size: contain;
 
     li {
       display: inline;
