Hero bg is managed via global.mjs

--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -14,7 +14,7 @@
 {% endblock %}
 
 {% block content %}
-  <div class="hero" id="header">
+  <div class="hero" id="header" style="--img-hero-bg-big: '{{ hero["bg-big"] }}'">
     <hgroup>
       <h2>{{ hero.heading }}</h2>
     </hgroup>
