--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -443,9 +443,9 @@ section p {
 
   ol {
     display: block;
-    margin-block: 2em;
+    margin-block: 0;
     margin-inline: auto;
-    padding: 0;
+    padding: 2em 0;
     max-width: 30ch;
     text-wrap: balance;
     list-style-type: none;
