--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -329,7 +329,7 @@ body > header {
 .is-hp > header {
   /* force white color on top of hero */
   --text-color: #fff;
-  background-color: transparent;
+  background-color: rgba(0, 0, 0, 0.3);
   transition: background-color 300ms ease-in;
 }
 
@@ -455,7 +455,7 @@ section p {
     font-size: clamp(1.75rem, 6vw, 3rem);
     background-position: 50% 50%;
     background-repeat: no-repeat;
-    background-image: radial-gradient(ellipse farthest-side at center, rgba(0,0,0,0.5) 50%, rgba(0,0,0,0) 100%);
+    background-image: radial-gradient(ellipse farthest-side at center, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 0) 100%);
     background-size: contain;
 
     li {
@@ -645,7 +645,7 @@ section p {
     }
 
     h3 {
-      font-size: clamp(1.25em, 4vw ,1.75em);
+      font-size: clamp(1.25em, 4vw, 1.75em);
       font-weight: 700;
       line-height: 1.25;
       text-transform: uppercase;
@@ -774,6 +774,7 @@ section p {
       a {
         pointer-events: none;
       }
+
       .button {
         opacity: 0.3;
       }
@@ -817,6 +818,7 @@ section p {
       &:hover {
         background-color: color-mix(in hsl, var(--text-color) 100%, white 20%);
       }
+
       &:active {
         background-color: color-mix(in hsl, var(--text-color) 100%, black 20%);
       }
