--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -276,6 +276,7 @@ body > header {
 
   &.is-pinned {
     --text-color: revert;
+    background-image: unset;
     background-color: color-mix(in srgb, var(--background-color), transparent 15%);
     backdrop-filter: blur(4px);
   }
@@ -329,7 +330,8 @@ body > header {
 .is-hp > header {
   /* force white color on top of hero */
   --text-color: #fff;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-image: linear-gradient(180deg, oklch(0 0 0 / 0.3) 75%, oklch(0 0 0 / 0.0));
+  background-color: transparent;
   transition: background-color 300ms ease-in;
 }
 
