--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -411,7 +411,6 @@ section p {
 
 .hero {
   --body-column: full;
-  grid-row: 1;
   --text-color: white;
   --hero-bg: var(--hero-bg-small);
 
@@ -423,6 +422,7 @@ section p {
   background-position: center top;
   background-size: cover;
 
+  grid-row: 1;
   display: grid;
   row-gap: 2em;
   padding-inline: 1em;
@@ -438,9 +438,28 @@ section p {
     --hero-bg: var(--hero-bg-big);
   }
 
-  p {
+  hgroup:has(h2) {
+    justify-self: center;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-image: radial-gradient(ellipse farthest-side at center, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 0) 100%);
+    background-size: contain;
+  }
+
+  h2 {
+    width: max-content;
+    margin-block-start: 4em;
+  }
+
+  > p {
     font-family: var(--accented-font);
     font-weight: 700;
+    width: min-content;
+    padding: 0.5em 2em;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-image: radial-gradient(ellipse farthest-side at center, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 0) 100%);
+    background-size: contain;
   }
 
   ol {
