--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -901,7 +901,10 @@ body > footer {
     display: block;
     width: 100%;
     height: 200px;
-    background: var(--trees) repeat-x bottom center;
+    border-bottom: 2px solid var(--accent2-color);
+    background-image: var(--trees), linear-gradient(0deg, var(--accent2-color), transparent 20%);
+    background-repeat: repeat-x;
+    background-position: bottom center;
     background-size: cover;
     @media (min-width: 1024px) {
       background-size: contain;
