/reload Dosis Latin Ext

--- a/src/html/layouts/master.njk
+++ b/src/html/layouts/master.njk
@@ -34,6 +34,7 @@
   {% block head_stylesheets %}{% endblock %}
   {% block head_preload %}
     <link rel="preload" href="{{ "dosis.latin.woff2" | assetUrl("fonts") }}" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="{{ "dosis.latin-ext.woff2" | assetUrl("fonts") }}" as="font" type="font/woff2" crossorigin>
   {% endblock %}
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
