--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -248,9 +248,41 @@ main, section, body > header, body > footer {
 }
 
 main {
+  --body-column: full;
   display: grid;
   grid-template-columns: subgrid;
   row-gap: 4em;
+
+  background-repeat: no-repeat;
+  background-position:
+    20% 13%,
+    4% 30%,
+    100% 42%,
+    62% 60%,
+    125% 80%,
+    125% 28%,
+    14% 75%;
+  background-size: 40%, 20%, 30%, 42%, 33%, 28%, 48%;
+
+  background-image:
+    asset-url("images", "cloud-1-l.svg"),
+    asset-url("images", "cloud-1-l.svg"),
+    asset-url("images", "cloud-1-l.svg"),
+    asset-url("images", "cloud-1-l.svg"),
+    asset-url("images", "cloud-1-l.svg"),
+    asset-url("images", "cloud-1-l.svg"),
+    asset-url("images", "cloud-1-l.svg");
+
+  @media (prefers-color-scheme: dark) {
+    background-image:
+      asset-url("images", "cloud-1-d.svg"),
+      asset-url("images", "cloud-1-d.svg"),
+      asset-url("images", "cloud-1-d.svg"),
+      asset-url("images", "cloud-1-d.svg"),
+      asset-url("images", "cloud-1-d.svg"),
+      asset-url("images", "cloud-1-d.svg"),
+      asset-url("images", "cloud-1-d.svg");
+  }
 
   > * {
     grid-column: var(--main-column, main);
