--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -9,8 +9,9 @@
   <meta name="description" content="{{ event.description }}">
   <meta property="fb:app_id" content="117540538260775">
   <meta property="og:type" content="website">
+  <meta name="twitter:title" property="og:title" conetnt="{{ title }}">
   <meta name="twitter:description" property="og:description" content="{{ event.description }}">
-  <meta name="twitter:title" property="og:site_name" content="{{ event.name }}">
+  <meta name="twitter:domain" property="og:site_name" content="{{ event.name }}">
 {% endblock %}
 
 {% block content %}
