--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -11,7 +11,7 @@
   <meta property="og:type" content="website">
   <meta name="twitter:title" property="og:title" conetnt="{{ title }}">
   <meta name="twitter:description" property="og:description" content="{{ event.description }}">
-  <meta name="twitter:domain" property="og:site_name" content="{{ event.name }}">
+  <meta property="og:site_name" content="{{ event.name }}">
 {% endblock %}
 
 {% block content %}
