--- a/src/html/layouts/master.njk
+++ b/src/html/layouts/master.njk
@@ -107,10 +107,10 @@
 {% block content %}{% endblock %}
 <footer>
   <section class="footer__contacts">
-    <div id="kontakt">
+   <!-- <div id="kontakt">
       <h2>Kontakty</h2>
       <p>Potřebujete kontaktovat pořadatele?</p>
-    </div>
+    </div> -->
     <div>
       <h3>Jakub Balada</h3>
       <p><a
@@ -118,22 +118,6 @@
       <h3>Pavel Kosina</h3>
       <p><a href="tel:+420777886838">+420&nbsp;777&nbsp;886&nbsp;838</a><br>
         <a href="mailto:pavel.kosina&#64;studnicefest.cz">pavel.kosina&#64;<!-- -->studnicefest.cz</a></p>
-    </div>
-    <div>
-      <div>
-        <a href="https://www.kudyznudy.cz/?utm_source=kzn&amp;utm_medium=partneri_kzn&amp;utm_campaign=banner"
-           title="Kudyznudy.cz - tipy na výlet" target="_blank">
-          <img src="https://www.kudyznudy.cz/getmedia/849ee326-f95a-43ce-812c-be9c5817c81e/KzN_banner_234x60.jpg.aspx"
-               width="234" height="60" alt="Kudyznudy.cz - tipy na výlet" loading="lazy">
-        </a>
-      </div>
-      <div>
-        <small class="partner">Studnice Fest podporuje Pardubický kraj</small><br>
-        <a href="https://www.pardubickykraj.cz/">
-          <img src="{{ "pardubicky-kraj.png" | assetUrl("images") }}" width="226" height="50" alt="Pardubický kraj"
-               class="pardubicky-kraj"
-               loading="lazy"></a>
-      </div>
     </div>
     <div class="footer__social-icons">
       <ul>
