--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -121,7 +121,7 @@
       </header>
       <p>Vstupenky budou pravděpodobně dostupné i&nbsp;na místě, nicméně kapacita
         je omezená. Doporučujeme proto využít předprodeje na&nbsp;<a
-          href="https://tickets.nfctron.com">NFCTron.cz</a>. V&nbsp;ceně vstupenky je i&nbsp;stanové
+          href="https://tickets.nfctron.com/event/eupathia/studnice-fest-2025">NFCTron.cz</a>. V&nbsp;ceně vstupenky je i&nbsp;stanové
         městečko. Parkovací stání se platí zvlášť.</p>
 
       <div class="tickets__list">
@@ -159,8 +159,7 @@
       </div>
 
       <div class="tickets__free">
-        <h3>Vstup zdarma</h3>
-        <p>Děti do 150cm, obyvatelé Studnice a ZTP</p>
+        <p>Děti do 150cm, obyvatelé Studnice a ZTP vstup zdarma.</p>
       </div>
     </section>
 
