--- a/src/html/layouts/master.njk
+++ b/src/html/layouts/master.njk
@@ -107,10 +107,10 @@
 {% block content %}{% endblock %}
 <footer>
   <section class="footer__contacts">
-   <!-- <div id="kontakt">
-      <h2>Kontakty</h2>
-      <p>Potřebujete kontaktovat pořadatele?</p>
-    </div> -->
+    <div id="kontakt">
+      <!--<h2>Kontakty</h2>
+      <p>Potřebujete kontaktovat pořadatele?</p>-->
+    </div> 
     <div>
       <h3>Jakub Balada</h3>
       <p><a
