--- a/src/html/layouts/master.njk
+++ b/src/html/layouts/master.njk
@@ -107,11 +107,11 @@
 {% block content %}{% endblock %}
 <footer>
   <section class="footer__contacts">
-    <div id="kontakt">
+    {#<div id="kontakt">
       <!--<h2>Kontakty</h2>
       <p>Potřebujete kontaktovat pořadatele?</p>-->
-    </div> 
-    <div>
+    </div> #}
+    <div id="kontakt">
       <h3>Jakub Balada</h3>
       <p><a
           href="mailto:jakub.balada&#64;studnicefest.cz">jakub.balada&#64;<!-- -->studnicefest.cz</a></p>
