--- a/src/html/layouts/master.njk
+++ b/src/html/layouts/master.njk
@@ -29,6 +29,22 @@
       src: url({{ "dosis.latin-ext.woff2" | assetUrl("fonts") }}) format("woff2");
       unicode-range: U+0100-0101, U+0104-0130, U+0132-0151, U+0154-017F, U+018F, U+0192, U+01A0-01A1, U+01AF-01B0, U+01FA-01FF, U+0218-021B, U+0237, U+0259, U+1E80-1E85, U+1E9E, U+20A1, U+20A4, U+20A6, U+20A8-20AA, U+20AD-20AE, U+20B1-20B2, U+20B4-20B5, U+20B8-20BA, U+20BD, U+20BF;
     }
+    @font-face {
+      font-family: "fallback for Dosis";
+      src: local("Arial");
+      ascent-override: 100%;
+      descent-override: 20%;
+      line-gap-override: 10%;
+      advance-override: 10;
+    }
+    @font-face {
+      font-family: "fallback for Dosis on Android";
+      src: local(Roboto);
+      ascent-override: 108%;
+      descent-override: 20%;
+      line-gap-override: -3%;
+      advance-override: 10;
+    }
   </style>
   <link rel="stylesheet" href="{{ 'index.css' | assetUrl('stylesheets') }}">
   {% block head_stylesheets %}{% endblock %}
