--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -11,6 +11,7 @@
   <meta property="og:type" content="website">
   <meta name="twitter:title" property="og:title" conetnt="{{ title }}">
   <meta name="twitter:description" property="og:description" content="{{ event.description }}">
+  <meta name="twitter:image" property="og:image" content="{{ "og-image.jpg" | assetUrl("images") }}">
   <meta property="og:site_name" content="{{ event.name }}">
 {% endblock %}
 
