--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -9,7 +9,8 @@
   <meta name="description" content="{{ event.description }}">
   <meta property="fb:app_id" content="117540538260775">
   <meta property="og:type" content="website">
-  <meta name="twitter:title" property="og:title" conetnt="{{ title }}">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" property="og:title" content="{{ title }}">
   <meta name="twitter:description" property="og:description" content="{{ event.description }}">
   <meta name="twitter:image" property="og:image" content="{{ "og-image.jpg" | assetUrl("images") }}">
   <meta property="og:site_name" content="{{ event.name }}">
