--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -1,4 +1,4 @@
-{% extends 'layouts/master.njk' %}
+{% extends "layouts/master.njk" %}
 {% set bodyClass = "is-hp" %}
 {% set bodySchema = "Festival" %}
 
