--- a/src/html/novinky/index.njk
+++ b/src/html/novinky/index.njk
@@ -78,7 +78,7 @@
         {% set image = images[post.image] %}
         <article id="{{ post.time }}"
                  class="{{ "has-image" if image }} {{ "has-long-text" if post.text.length > 200 }} {{ "has-xlong-text" if post.text.length > 400 }}">
-          <time datetime="{{ post.time }}">{{ formatDate(post.time) }}</time>
+          <time datetime="{{ post.time }}">{{ post.time | formatDate }}</time>
           {% if image %}
             <img alt="" width="{{ image.width }}" height="{{ image.height }}" loading="lazy"
                  sizes="(min-width: 840px) 300px, 88.43vw"
