--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -76,7 +76,7 @@
             {% endif %}
           </a>
           {% markdown %}
-            {{ post.text | removeHashtags }}
+            {{ post.text | removeHashtags | processTypo("cs") }}
 
             {% if post.likes %}Líbilo se&nbsp;
               <data value="{{ post.likes }}">{{ post.likes }}×</data>{% endif %}
