--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -49,7 +49,13 @@
         <li data-level="2">Tata Bojs</li>
         <li data-level="2">Skyline</li>
         <li data-level="2">Pokáč</li>
-        <li data-level=3>The Prostitutes<li data-level=3>Jamaron<li data-level=3>Mucha<li data-level=3>Fast Food Orchestra<li data-level=3>Vojtaano<li data-level=3>Dukla Vozovna<li data-level=3>Volant
+        <li data-level=3>The Prostitutes</li>
+        <li data-level=3>Fast Food Orchestra</li>
+        <li data-level=3>Jamaron</li>
+        <li data-level=3>Mucha</li>
+        <li data-level=3>Vojtaano</li>
+        <li data-level=3>Dukla Vozovna</li>
+        <li data-level=3>Volant</li>
       </ol>
       {% if hero.text %}<p>{{ hero.text }}</p>{% endif %}
       <div>
