--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -45,15 +45,12 @@
     </hgroup>
     <section>
       <ol>
-        <li data-level="1">The Subways</li>
-        <li data-level="2">Tata Bojs</li>
-        <li data-level="2">Skyline</li>
-        <li data-level="2">Pokáč</li>
-        <li data-level=3>Fast Food Orchestra</li>
-        <li data-level=3>The Prostitutes</li>
-        <li data-level=3>Jamaron</li>
-        <li data-level=3>Mucha</li>
-        <li data-level=3>Vojtaano</li>
+        {% for key in event.artists %}
+          {% set artist = artists[key] %}
+          {% if artist.heroLevel %}
+            <li data-level="{{ artist.heroLevel }}">{# <a href="#{{ key }}"> #}{{ artist.title }}{# </a> #}</li>
+          {% endif %}
+        {% endfor %}
       </ol>
       {% if hero.text %}<p>{{ hero.text }}</p>{% endif %}
       <div>
