--- a/src/html/informace/index.njk
+++ b/src/html/informace/index.njk
@@ -1,5 +1,5 @@
 {% extends 'layouts/master.njk' %}
-{% set title = "Důležité informace" %}
+{% set title = "Praktické informace" %}
 
 {% block head_preconnect %}
   <link rel="preconnect" href="https://unpkg.com">
