--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -87,7 +87,7 @@
     </section>
     {% if info.visible %}
       <section id="informace-a-upozorneni">
-        <header id="map">
+        <header>
           <h2>Důležité informace</h2>
         </header>
         <article>
