--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -741,7 +741,10 @@ section p {
 }
 
 .lineup {
-  @media screen and (min-width: 840px) {
+  --_day-gap: 1lh;
+  @container (width > 1016px) {
+    --main-column: extra;
+    --_day-gap: 0;
     .lineup__days {
       display: grid;
       grid-template: "fr sa" / 1fr 1fr;
@@ -749,17 +752,37 @@ section p {
     }
   }
 
+  .lineup__days > div {
+    display: grid;
+    grid-template-columns: 4ch 1fr auto;
+    height: fit-content;
+    column-gap: 1ch;
+  }
+
+  .lineup__days > div + div {
+    margin-block-start: var(--_day-gap);
+    grid-area: sa;
+  }
+
+  .lineup__days h3 {
+    grid-column: span 3;
+    margin-block-end: 0.5lh;
+  }
+
   .lineup__item {
+    display: grid;
+    grid-column: span 3;
+    grid-template-columns: subgrid;
     font-size: 1.5em;
-    display: flex;
-    flex-direction: row;
     align-items: baseline;
-    gap: 1em;
-    padding: 0.5rem 0;
+    padding-block: 0.25em;
 
     time, small {
       font-family: var(--accented-font);
-      width: 2em;
+    }
+
+    time {
+      font-size: 1rem;
     }
 
     strong {
@@ -775,8 +798,6 @@ section p {
       font-variant-caps: all-petite-caps;
       text-align: end;
       text-transform: uppercase;
-      width: 6em;
-      align-self: first baseline;
     }
 
     small.outlook {
