--- a/src/html/layouts/master.njk
+++ b/src/html/layouts/master.njk
@@ -123,6 +123,7 @@
         <a href="mailto:pavel.kosina&#64;studnicefest.cz">pavel.kosina&#64;<!-- -->studnicefest.cz</a></p>
     </div>
     <div class="footer__social-icons">
+<a href="https://www.kudyznudy.cz/?utm_source=kzn&utm_medium=partneri_kzn&utm_campaign=banner" target="_blank"><img src="https://www.kudyznudy.cz/getmedia/fc5f14ae-5cc6-4aab-9303-1cdfb20659d2/1012102023-online-bannery-hq-234x60.jpg.aspx" width="234"  height="60" alt="Kudyznudy.cz"></a>
       <ul>
         <li><a href="https://www.facebook.com/StudniceFest/" target="fb">
             <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" viewBox="0 0 40 40">
